--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>SRAM - Speicher in Mikrocontrollern</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -12,12 +12,243 @@
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		
+		<style>
+			.reveal h1, .reveal h2, .reveal h3 {
+				text-transform: none;
+			}
+			.reveal pre {
+				width: 100%;
+				font-size: 0.55em;
+			}
+			.tech-box {
+				background: rgba(100, 200, 255, 0.1);
+				padding: 20px;
+				border-left: 4px solid #64c8ff;
+				margin: 20px 0;
+			}
+			.comparison-table {
+				font-size: 0.8em;
+				margin: 20px 0;
+			}
+			.comparison-table td {
+				padding: 8px;
+				border: 1px solid #666;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<!-- Slide 1: Titel -->
+				<section>
+					<h1>SRAM</h1>
+					<h3>Static Random Access Memory</h3>
+					<p style="margin-top: 60px; font-size: 0.8em;">Eine Einführung in Computerspeicher und Mikrocontroller</p>
+					<p style="margin-top: 40px; font-size: 0.6em;">Digital Technik - Dezember 2025</p>
+				</section>
+
+				<!-- Slide 2: Was ist ein Computer? -->
+				<section>
+					<h2>Was ist ein Computer?</h2>
+					<div style="margin-top: 50px; font-size: 0.9em;">
+						<p>🧠 <strong>Verarbeitung:</strong> CPU</p>
+						<p>💾 <strong>Speicherung:</strong> RAM / Flash</p>
+						<p>🔌 <strong>Ein-/Ausgabe:</strong> I/O, Sensoren, Aktoren</p>
+					</div>
+				</section>
+
+				<!-- Slide 3: CPU + Speicher + I/O -->
+				<section>
+					<h2>Von-Neumann-Architektur</h2>
+					<div style="margin-top: 40px; text-align: left; font-size: 0.85em;">
+						<div class="tech-box">
+							<strong>CPU (Prozessor):</strong><br>
+							Führt Befehle aus, verarbeitet Daten
+						</div>
+						<div class="tech-box">
+							<strong>Memory (Speicher):</strong><br>
+							RAM (schnell, flüchtig) & Flash (langsam, persistent)
+						</div>
+						<div class="tech-box">
+							<strong>I/O (Ein-/Ausgabe):</strong><br>
+							Sensoren, LEDs, Motoren, Kommunikation
+						</div>
+					</div>
+				</section>
+
+				<!-- Slide 4: Was ist RAM allgemein? -->
+				<section>
+					<h2>Was ist RAM?</h2>
+					<p style="margin-top: 40px;"><strong>RAM = Random Access Memory</strong></p>
+					<ul style="margin-top: 40px; font-size: 0.9em;">
+						<li>⚡ <strong>Sehr schnell:</strong> ~1-10 Nanosekunden</li>
+						<li>🔄 <strong>Flüchtig:</strong> Daten verloren nach Stromabschalter</li>
+						<li>📍 <strong>Direkt adressierbar:</strong> Jede Speicherstelle kann sofort zugegriffen</li>
+						<li>💰 <strong>Teuer:</strong> Hohe Kosten pro Bit</li>
+					</ul>
+				</section>
+
+				<!-- Slide 5: DRAM vs SRAM Übersicht -->
+				<section>
+					<h2>DRAM vs SRAM</h2>
+					<table class="comparison-table" style="margin-top: 40px; width: 90%;">
+						<tr style="background: #555;">
+							<th style="padding: 10px;">Eigenschaft</th>
+							<th style="padding: 10px;">DRAM</th>
+							<th style="padding: 10px;">SRAM</th>
+						</tr>
+						<tr>
+							<td><strong>Kapazität</strong></td>
+							<td>GB</td>
+							<td>KB - MB</td>
+						</tr>
+						<tr>
+							<td><strong>Geschwindigkeit</strong></td>
+							<td>Langsamer</td>
+							<td>Schneller</td>
+						</tr>
+						<tr>
+							<td><strong>Kosten</strong></td>
+							<td>Günstig</td>
+							<td>Teuer</td>
+						</tr>
+						<tr>
+							<td><strong>Komplexität</strong></td>
+							<td>1 Transistor</td>
+							<td>6 Transistoren</td>
+						</tr>
+						<tr>
+							<td><strong>Anwendung</strong></td>
+							<td>PC, Laptop</td>
+							<td>Mikrocontroller</td>
+						</tr>
+					</table>
+				</section>
+
+				<!-- Slide 6: Wie funktioniert DRAM? -->
+				<section>
+					<h2>Funktionsweise: DRAM</h2>
+					<div style="margin-top: 50px; text-align: left; font-size: 0.85em;">
+						<p style="margin-bottom: 30px;"><strong>DRAM = Dynamic RAM</strong></p>
+						<ul>
+							<li>📦 <strong>1 Transistor + 1 Kondensator:</strong> Speichert Bit als Ladung</li>
+							<li>⚠️ <strong>Kondensator entlädt sich:</strong> Muss regelmäßig "refreshed" werden</li>
+							<li>🔄 <strong>Refresh = Mehraufwand:</strong> Zusätzliche Zyklen für Datensicherung</li>
+							<li>📉 <strong>Aber: Hohe Kapazität</strong> pro Fläche</li>
+						</ul>
+					</div>
+				</section>
+
+				<!-- Slide 7: Wie funktioniert SRAM? -->
+				<section>
+					<h2>Funktionsweise: SRAM</h2>
+					<div style="margin-top: 50px; text-align: left; font-size: 0.85em;">
+						<p style="margin-bottom: 30px;"><strong>SRAM = Static RAM</strong></p>
+						<ul>
+							<li>🔌 <strong>6 Transistoren (Flipflop):</strong> Speichert Bit stabil</li>
+							<li>✅ <strong>Kein Refresh nötig:</strong> Solange Strom anliegt, bleibt Wert erhalten</li>
+							<li>⚡ <strong>Schneller:</strong> Keine Refresh-Verzögerungen</li>
+							<li>❌ <strong>Aber: Weniger Kapazität</strong> pro Fläche</li>
+						</ul>
+					</div>
+				</section>
+
+				<!-- Slide 8: Warum SRAM in Mikrocontrollern? -->
+				<section>
+					<h2>Warum SRAM in µC-Prozessoren?</h2>
+					<div style="margin-top: 50px; text-align: left; font-size: 0.9em;">
+						<p style="margin-bottom: 20px;">✅ <strong>Schnelle Zugriffe erforderlich</strong></p>
+						<p style="margin-bottom: 20px;">✅ <strong>Wenig Speicher nötig</strong> (KB-MB genügen)</p>
+						<p style="margin-bottom: 20px;">✅ <strong>Einfache Integration</strong> auf Chip</p>
+						<p style="margin-bottom: 20px;">✅ <strong>Günstige Refresh:</strong> Keine Overhead-Zyklen</p>
+						<p style="margin-bottom: 20px;">✅ <strong>Niedrige Latenz:</strong> Echtzeit-Anforderungen</p>
+					</div>
+				</section>
+
+				<!-- Slide 9: SRAM Vor-/Nachteile -->
+				<section>
+					<h2>SRAM: Vor- und Nachteile</h2>
+					<div style="margin-top: 40px; display: flex; gap: 30px;">
+						<div style="flex: 1; text-align: left; font-size: 0.85em;">
+							<h4 style="color: #90ee90;">✅ Vorteile</h4>
+							<ul>
+								<li>Sehr schnell</li>
+								<li>Zuverlässig</li>
+								<li>Keine Refresh-Verzögerung</li>
+								<li>Einfache Implementierung</li>
+							</ul>
+						</div>
+						<div style="flex: 1; text-align: left; font-size: 0.85em;">
+							<h4 style="color: #ff6b6b;">❌ Nachteile</h4>
+							<ul>
+								<li>Teuer pro Bit</li>
+								<li>Weniger Kapazität</li>
+								<li>Höherer Stromverbrauch</li>
+								<li>Größerer Platzbedarf</li>
+							</ul>
+						</div>
+					</div>
+				</section>
+
+				<!-- Slide 10: SRAM in echten Microcontrollern -->
+				<section>
+					<h2>SRAM in Microcontrollern</h2>
+					<table class="comparison-table" style="margin-top: 40px; width: 90%; font-size: 0.75em;">
+						<tr style="background: #555;">
+							<th style="padding: 10px;">µC</th>
+							<th style="padding: 10px;">SRAM</th>
+							<th style="padding: 10px;">Flash</th>
+						</tr>
+						<tr>
+							<td><strong>ATmega32</strong><br>(Arduino)</td>
+							<td>2 KB</td>
+							<td>32 KB</td>
+						</tr>
+						<tr>
+							<td><strong>STM32F4</strong><br>(ARM)</td>
+							<td>192 KB</td>
+							<td>512 KB</td>
+						</tr>
+						<tr>
+							<td><strong>ESP32</strong><br>(IoT)</td>
+							<td>520 KB</td>
+							<td>4 MB</td>
+						</tr>
+					</table>
+					<p style="margin-top: 30px; font-size: 0.8em;">🔑 SRAM = Laufzeit-Speicher, Flash = Programmspeicher</p>
+				</section>
+
+				<!-- Slide 11: Minecraft RAM Aufbau -->
+				<section>
+					<h2>Fun-Fact: RAM in Minecraft</h2>
+					<div style="margin-top: 50px; text-align: left; font-size: 0.9em;">
+						<p style="margin-bottom: 20px;">🎮 Mit Redstone & Repeater lässt sich ein <strong>RAM-ähnlicher Speicher</strong> bauen!</p>
+						<p style="margin-bottom: 20px;">📦 <strong>RS-NOR-Flipflop:</strong> Speichert 1 Bit (an/aus)</p>
+						<p style="margin-bottom: 20px;">🔧 Mehrere kombiniert = Speicherblock</p>
+						<p style="margin-bottom: 20px;">💡 Zeigt: Digitale Logik funktioniert überall - auch im Spiel!</p>
+					</div>
+				</section>
+
+				<!-- Slide 12: Fazit -->
+				<section>
+					<h2>Fazit</h2>
+					<div style="margin-top: 50px; text-align: left; font-size: 0.9em;">
+						<p style="margin-bottom: 15px;"><strong>SRAM ist:</strong></p>
+						<ul>
+							<li>Der "Express-Speicher" von Mikrocontrollern</li>
+							<li>Notwendig für schnelle, zeitkritische Aufgaben</li>
+							<li>Ein Kompromiss: Geschwindigkeit vs. Kapazität</li>
+							<li>Fundamental für digitale Systeme überall</li>
+						</ul>
+					</div>
+				</section>
+
+				<!-- Slide 13: Fragerunde -->
+				<section>
+					<h1>Fragen?</h1>
+					<p style="margin-top: 60px; font-size: 0.85em;">Danke für eure Aufmerksamkeit!</p>
+				</section>
 			</div>
 		</div>
 
@@ -31,7 +262,13 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
-
+				width: 960,
+				height: 700,
+				margin: 0.1,
+				minScale: 0.2,
+				maxScale: 2.0,
+				transition: 'slide',
+				
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
