Aktualisierung der Präsentation

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 					<h3>Gibt es noch Fragen?</h3>
 					<p style="margin-top: 60px; font-size: 0.85em;">Oder Feedback gerne!</p>
 					<div style="margin-top: 80px; text-align: center; font-size: 0.7em; color: #aaa;">
-						<p><strong>📺 YouTube-Kanal:</strong> <a href="https://youtube.com/@BigA" style="color: #ff6b6b;">@BigA</a></p>
+						<p><strong>📺 YouTube-Quelle:</strong> <a href="https://www.youtube.com/@AtriocClips" style="color: #ff6b6b;">@BigA</a></p>
 						<p style="margin-top: 10px;"><strong>📚 Quellen:</strong></p>
 						<ul style="margin-top: 5px; text-align: left; display: inline-block;">
 							<li>Semiconductor Industry Association (SIA)</li>
