Add SRAM 6-Transistor Aufbau slide with image and explanation

--- a/index.html
+++ b/index.html
@@ -288,7 +288,25 @@
 						</div>
 					</section>
 
-					<!-- Slide 4.4: SRAM Anwendung -->
+					<!-- Slide 4.4: SRAM Aufbau mit 6 Transistoren -->
+					<section>
+						<h3>SRAM: Aufbau mit 6 Transistoren</h3>
+						<div style="margin-top: 20px; text-align: center;">
+							<img src="SRAM-Aufbau.png" alt="SRAM-Aufbau mit 6 Transistoren" style="max-width: 80%; height: auto; border: 1px solid #666; margin-bottom: 20px;">
+						</div>
+						<div style="text-align: left; font-size: 0.8em; margin-top: 20px;">
+							<p><strong>Aufbau-Erklärung:</strong></p>
+							<ul style="margin-left: 20px;">
+								<li><strong>4 Transistoren (M1-M4):</strong> Kreuzgekoppelte Inverter bilden das RS-Flipflop (speichert 1 Bit)</li>
+								<li><strong>2 Access-Transistoren (M5-M6):</strong> Steuern den Zugriff über Bitlines (BL, BLB) und Wordline (WL)</li>
+								<li><strong>Funktion:</strong> WL aktiviert Zugriff; BL/BLB lesen/schreiben den Bit-Wert</li>
+								<li><strong>Vorteil:</strong> Statisch - kein Refresh nötig, sehr schnell</li>
+							</ul>
+							<p style="margin-top: 15px; font-size: 0.7em; color: #aaa;"><strong>Quelle:</strong> <a href="https://www.iue.tuwien.ac.at/phd/entner/node34.html" target="_blank">TU Wien - SRAM Grundlagen</a></p>
+						</div>
+					</section>
+
+					<!-- Slide 4.5: SRAM Anwendung -->
 					<section>
 						<h3>SRAM: Wo wird es verwendet?</h3>
 						<div style="margin-top: 40px; text-align: left; font-size: 0.85em;">
@@ -428,7 +446,7 @@
 					<section>
 						<h2>Fun-Fact 2: Warum sind RAM Preise so teuer?</h2>
 						<div style="margin-top: 50px; text-align: left; font-size: 0.9em;">
-							<p style="margin-bottom: 20px;">💸 <strong>Problem:</strong> RAM-Preise sind 2025/2025 wieder extrem hoch!</p>
+							<p style="margin-bottom: 20px;">💸 <strong>Problem:</strong> RAM-Preise sind 2025/2026 wieder extrem hoch!</p>
 							<p style="margin-bottom: 20px;">❌ <strong>NICHT:</strong> NVIDIA Verschwörung oder absichtliche Knappheit</p>
 							<p style="margin-bottom: 20px;">✅ <strong>GRUND:</strong> Supply &amp; Demand + AI-Boom</p>
 							<p style="margin-bottom: 20px;">🤖 <strong>Das Problem:</strong> AI-Datenzentren kaufen ALLE RAM-Produktion auf!</p>
@@ -545,7 +563,7 @@
 
 					<!-- Slide 7.6: Upgrade-Warnung -->
 					<section>
-						<h2>⚠️ Upgraded euren PC nicht jetzt ab!</h2>
+						<h2>⚠️ Upgradet euren PC jetzt nicht!</h2>
 						<img src="kauft kein ram jetzt.png" style="margin: 25px auto; display: block; width: 95%; max-width: 700px; border-radius: 4px;"/>
 						<p style="margin-top: 25px; font-size: 0.8em; color: #aaa; text-align: center;">💡 <strong>Warte bis 2026/2027:</strong> RAM-Preise sollten dann wieder sinken, wenn neue Fabriken produktiv werden!</p>
 					</section>
